

[build-system]

requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]


name = "package-name"
version = "0.1.0"
description = "Package description"

authors = [
    {name = "Rune Tech", email = "runetech2024@gmail.com"}
]

license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "aiohttp >= 3.10.10", 
]
requires-python = ">=3.11"

keywords = []

[project.urls]
Homepage = "https://github.com/runetech0"
github = "https://github.com/runetech0"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]



"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"' 
]

"pacakge_name/__init__.py" = [
    "{version}"
]